--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
+
 .App {
-  text-align: center;
+  display: flex;
+  height: 100vh;
+  background-color: #f2efd3;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Sidebar {
+  width: 308px;
+  height: 100%;
+  background-color: #f2efd3;
+  padding: 20px;
+  box-sizing: border-box;
+  overflow: auto;
+  position: fixed;
+  left: 0;
+  top: 0;
+  transition: transform 0.6s ease;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Main {
+  flex-grow: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 230px;
+  box-sizing: border-box;
+  margin-left: 506px;
+  transition: margin-left 0.6s ease;
+}
+
+.ColorBox children {
+  width: 200px;
+  height: 200px;
+}
+
+.boxOptions {
+  display: flex;
+  flex-direction: row;
+}
+
+button {
+  padding: 10px 20px;
+  font-size: 18px;
+  background-color: #4caf50;
   color: white;
+  border: none;
+  cursor: pointer;
+  margin: 10px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover {
+  background-color: #45a049;
+  transform: scale(1.05);
 }
