--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,80 @@
-
 .App {
-  display: flex;
-  height: 100vh;
-  background-color: #f2efd3;
+	display: flex;
+	height: 100vh;
+	background-color: #f2efd3;
 }
 
 .Sidebar {
-  width: 308px;
-  height: 100%;
-  background-color: #f2efd3;
-  padding: 20px;
-  box-sizing: border-box;
-  overflow: auto;
-  position: fixed;
-  left: 0;
-  top: 0;
-  transition: transform 0.6s ease;
+	width: 308px;
+	height: 100%;
+	background-color: #f2efd3;
+	padding: 20px;
+	box-sizing: border-box;
+	overflow: auto;
+	position: fixed;
+	left: 0;
+	top: 0;
+	transition: transform 0.6s ease;
+}
+
+.Sidebar::-webkit-scrollbar {
+	background-color: transparent;
+}
+
+.Sidebar::-webkit-scrollbar-thumb {
+	background-color: 10px;
+	width: 13px
 }
 
 .Main {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 230px;
-  box-sizing: border-box;
-  margin-left: 506px;
-  transition: margin-left 0.6s ease;
+	flex-grow: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	box-sizing: border-box;
+	position: fixed;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	transition: margin-left 0.6s ease;
 }
 
 .ColorBox children {
-  width: 200px;
-  height: 200px;
+	width: 200px;
+	height: 200px;
 }
 
 .boxOptions {
-  display: flex;
-  flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
 
 button {
-  padding: 10px 20px;
-  font-size: 18px;
-  background-color: #4caf50;
-  color: white;
-  border: none;
-  cursor: pointer;
-  margin: 10px;
-  transition: background-color 0.3s ease, transform 0.3s ease;
+	padding: 10px 20px;
+	font-size: 18px;
+	background-color: #4caf50;
+	color: white;
+	border: none;
+	cursor: pointer;
+	margin: 10px;
+	transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 button:hover {
-  background-color: #45a049;
-  transform: scale(1.05);
+	background-color: #45a049;
+	transform: scale(1.05);
+}
+
+.progress-bar-container {
+	width: 100%;
+	height: 20px;
+	background-color: #f3f3f3;
+}
+
+.progress-bar {
+	height: 100%;
+	width: 100%;
+	background-color: #689f38;
+	transition: width 1s linear;
 }
